--- a/1/EomTool/EomToolWeb/Views/Invoices/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/Show.cshtml
@@ -11,6 +11,7 @@
 <table style="border: 1px solid gray; border-spacing: 10px 0">
     <tr>
         <th>Quantity</th>
+        <th>ItemCode</th>
         <th style="text-align: left">Description</th>
         <th style="text-align: left" colspan="2">Price</th>
         <th style="text-align: left" colspan="2">SubTotal</th>
@@ -20,6 +21,7 @@
     var li = invoice.LineItems[i];
     <tr>
         <td style="text-align: center">@li.NumUnits</td>
+        <td>@li.ItemCode</td>
         <td>@li.Campaign.campaign_name</td>
         <td>@li.Currency.name</td>
         <td style="text-align: right">@li.AmountPerUnit.ToString("N2")</td>
@@ -36,6 +38,7 @@
         {
             <tr style="background-color:#ddd; display: none" class="sub@(i)">
                 <td style="text-align: center">@item.num_units</td>
+                <td>@item.UnitTypeName</td>
                 <td style="text-align: right">SubId: @item.affid ...&nbsp;</td>
                 <td>@item.CurrencyName</td>
                 <td style="text-align: right">@item.amount_per_unit.ToString("N2")</td>
@@ -49,7 +52,7 @@
         <td colspan="6">&nbsp;</td>
     </tr>
     <tr>
-        <td colspan="4" style="font-weight: bold; text-align: right">TOTAL:&nbsp;&nbsp;&nbsp;</td>
+        <td colspan="5" style="font-weight: bold; text-align: right">TOTAL:&nbsp;&nbsp;&nbsp;</td>
         <td>@invoice.CurrencyName</td>
         <td>@invoice.Total.ToString("N2")</td>
     </tr>
