--- a/1/EomTool/EomToolWeb/Views/Invoices/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/Index.cshtml
@@ -12,7 +12,7 @@
 {
     <tr style="background-color: #eee">
         <td>@inv.DateRequested.ToShortDateString() @inv.DateRequested.ToShortTimeString()</td>
-        <td>@inv.Advertiser.AccountManager.name</td>
+        <td>@inv.Advertiser.AccountManagerTeam.name</td>
         <td>@inv.Advertiser.name</td>
         <td>@inv.CurrencyName</td>
         <td>@inv.Total.ToString("N2")</td>
