--- a/1/EomTool/EomToolWeb/Views/Invoices/Start.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/Start.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    IQueryable<AccountManager> AMs = ViewBag.AccountManagers;
+    IQueryable<AccountManagerTeam> AMs = ViewBag.AMs;
 }
 <h2>Invoices</h2>
 
