--- a/1/EomTool/EomToolWeb/Views/Invoices/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/Show.cshtml
@@ -23,7 +23,7 @@
     <tr>
         <td style="text-align: center">@li.NumUnits</td>
         <td>@li.ItemCode</td>
-        <td>@li.Campaign.campaign_name</td>
+        <td>@li.Campaign.DisplayName</td>
         <td>@li.Currency.name</td>
         <td style="text-align: right">@li.AmountPerUnit.ToString("N2")</td>
         <td>@li.Currency.name</td>
