--- a/1/EomTool/EomToolWeb/Views/Shared/_Layout2014.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_Layout2014.cshtml
@@ -6,17 +6,13 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
 
+    @Styles.Render("~/Content/Site2014.css")
+
     <link href="~/Content/kendo/2014.1.416/kendo.common.min.css" rel="stylesheet" />
     <link href="~/Content/kendo/2014.1.416/kendo.silver.min.css" rel="stylesheet" />
 
     <script src="~/Scripts/kendo/2014.1.416/jquery.min.js"></script>
     <script src="~/Scripts/kendo/2014.1.416/kendo.ui.core.min.js"></script>
-
-    <style>
-        body {
-            font-family: "Segoe UI" , Verdana, Helvetica, Sans-Serif;
-        }
-    </style>
 </head>
 <body>
     @RenderBody()
