invoices: refactoring + misc

--- a/1/EomTool/EomToolWeb/Views/Invoices/ChooseAdvertiser.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/ChooseAdvertiser.cshtml
@@ -1,10 +1,4 @@
 ﻿@model IEnumerable<EomTool.Domain.DTOs.CampaignAmount>
-@{
-    var campaignAmounts = Model.ToList();
-    int lastAdvId = -1;
-    bool grayRow = false;
-    bool firstRow = true;
-}
 
 <h2>Advertiser Summary</h2>
 
@@ -12,37 +6,7 @@ Click on an advertiser to generate an invoice request.<br />
 Click on a campaign to edit its display name (as it will appear in an invoice).<br />
 <br />
 
-<table style="border: 1px solid gray">
-    <tr>
-        <th>Advertiser</th>
-        <th>PID</th>
-        <th>Campaign</th>
-        <th>#Pubs</th>
-        <th>#Units</th>
-        <th colspan="2">Revenue</th>
-        <th>Invoiced</th>
-    </tr>
-@foreach (var ca in campaignAmounts)
-{
-    if (ca.AdvId != lastAdvId)
-    {
-        lastAdvId = ca.AdvId;
-        grayRow = !grayRow;
-        firstRow = true;
-    }
-    else
-    {
-        firstRow = false;
-    }
-    <tr style="@(grayRow ? "background-color:#ddd" : "")">
-        <td>@(firstRow ? Html.ActionLink(ca.AdvertiserName, "ChooseAmounts", new { advid = ca.AdvId }) : new HtmlString(""))</td>
-        <td style="text-align: center">@ca.Pid</td>
-        <td>@Html.ActionLink(ca.CampaignName, "EditCampaign", new { pid = ca.Pid }, new { target = "_blank" })</td>
-        <td style="text-align: center">@ca.NumAffs</td>
-        <td style="text-align: center">@ca.NumUnits</td>
-        <td>@ca.RevenueCurrency</td>
-        <td style="text-align: right">@ca.Revenue.ToString("N2")</td>
-        <td style="text-align: right">@ca.InvoicedAmount.ToString("N2")</td>
-    </tr>    
+@{
+    ViewBag.RequestingInvoice = true;
 }
-</table>
+@Html.Partial("CampaignAmounts")
