--- a/1/EomTool/EomToolWeb/Views/Invoices/Summary.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/Summary.cshtml
@@ -1,4 +1,4 @@
-﻿@model InvoicesAccounting
+﻿@model InvoicesSummary
 @{
     var incompleteInvoices = Model.Invoices(false);
     var completeInvoices = Model.Invoices(true);
