--- a/1/EomTool/EomToolWeb/Views/Invoices/ChooseAdvertiser.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/ChooseAdvertiser.cshtml
@@ -9,4 +9,4 @@ Click on a campaign to edit its display name (as it will appear in an invoice).<
 @{
     ViewBag.RequestingInvoice = true;
 }
-@Html.Partial("CampaignAmounts")
+@Html.Partial("../Workflow/CampaignAmounts")
