--- a/1/EomTool/EomToolWeb/Views/Invoices/ChooseAmounts.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/ChooseAmounts.cshtml
@@ -11,7 +11,7 @@ Select the amounts to include in the invoice:
 @using (Html.BeginForm("Generate", "Invoices"))
 {
     Model.ShowCheckboxes = true;
-    @Html.Partial("CampaignAffiliateAmounts")
+    @Html.Partial("../Workflow/CampaignAffiliateAmounts")
     <br />
     <input type="submit" value="Preview Invoice" />
 }
