--- a/1/EomTool/EomToolWeb/Views/Workflow/EditCampaign.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Workflow/EditCampaign.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EomTool.Domain.Entities.Campaign
 
-@using (Html.BeginForm("EditCampaign", "Invoices", FormMethod.Post))
+@using (Html.BeginForm())
 {
 <fieldset>
     <legend>Campaign</legend>
