filter by campaignstatus, uninvoiced, etc

--- a/1/EomTool/EomToolWeb/Views/Invoices/ChooseAdvertiser.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/ChooseAdvertiser.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<EomTool.Domain.DTOs.CampaignAmount>
 
-<h2>Advertiser Summary</h2>
+<h2>Campaign Summary</h2>
 
 Click on an advertiser to generate an invoice request.<br />
 Click on a campaign to edit its display name (as it will appear in an invoice).<br />
