--- a/1/EomTool/EomToolWeb/Views/Workflow/CampaignAffiliateAmounts.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Workflow/CampaignAffiliateAmounts.cshtml
@@ -44,7 +44,12 @@
         <td style="text-align: right">@ca.Revenue.ToString("N2")</td>
         @if (Model.ShowCheckboxes)
         {
-            <td><input type="checkbox" name="idpairs" value="@(ca.Pid + "," + ca.AffId)" class="chk@(ca.Pid)" @checkedString /></td>
+            <td>
+                @if (ca.InvoicedAmount < ca.Revenue)
+                {
+                    <input type="checkbox" name="idpairs" value="@(ca.Pid + "," + ca.AffId)" class="chk@(ca.Pid)" @checkedString />
+                }
+            </td>
             @* Note: We assume that each pid/affid pair has a unique currency *@
             <td>
                 @if (firstRow)
@@ -74,7 +79,7 @@
                 <td></td>
                 <td></td>
             }
-            <td style="text-align: right">@sa.InvoicedAmount.ToString("N2")</td>
+            <td style="font-weight: bold; text-align: right">@sa.InvoicedAmount.ToString("N2")</td>
         </tr>
     }
 }
