tweaks, determine AM, show period, etc (test version 1)

--- a/1/EomTool/EomToolWeb/Views/Invoices/ChooseAdvertiser.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/ChooseAdvertiser.cshtml
@@ -3,7 +3,7 @@
 <h2>Campaign Summary</h2>
 
 Click on an advertiser to generate an invoice request.<br />
-Click on a campaign to edit its display name (as it will appear in an invoice).<br />
+Hover over a campaign to see its display name (as it will appear in an invoice).<br />
 <br />
 
 @{
