--- a/1/EomTool/EomToolWeb/Views/Workflow/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Workflow/Index.cshtml
@@ -5,6 +5,9 @@
 
 <h2>Campaign Summary</h2>
 
+Accounting Period: <b>@Model.CurrentEomDateString</b>
+<br /><br />
+
 Status:
 @foreach (var iStatus in statuses)
 {
