--- a/1/EomTool/EomToolWeb/Views/Invoices/Summary.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/Summary.cshtml
@@ -11,7 +11,8 @@ Accounting Period:
 <br />
 
 Go to:
-@Html.ActionLink("Campaign Summary", "Index", "Workflow")
+@Html.ActionLink("Campaign Summary", "Index", "Workflow") |
+@Html.ActionLink("Invoice Requestor", "Start")
 <br /><br />
 
 @if (incompleteInvoices.Count() > 0)
