--- a/1/EomTool/EomToolWeb/Views/Workflow/CampaignAffiliateAmounts.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Workflow/CampaignAffiliateAmounts.cshtml
@@ -13,12 +13,13 @@
         <th>Affiliate</th>
         <th>#Units</th>
         <th colspan="2">Revenue</th>
+        <th>Invoiced</th>
         @if (Model.ShowCheckboxes)
         {
-            <th></th>
-            <th></th>
+            <th colspan="2" style="text-align: left">&nbsp;Include</th>
         }
-        <th>Invoiced</th>
+        <th colspan="2">Cost</th>
+        <th>Margin</th>
     </tr>
 @for (int i = 0; i < campaignAmounts.Count; i++)
 {
@@ -34,7 +35,6 @@
         firstRow = false;
     }
     //decimal perunit = ca.Revenue / ca.NumUnits;
-    string checkedString = (ca.InvoicedAmount < ca.Revenue ? "checked=\"checked\"" : "");
     <tr style="@(grayRow ? "background-color:#ddd" : "")">
         <td style="text-align: center">@(firstRow ? ca.Pid.ToString() : "")</td>
         <td>
@@ -47,11 +47,13 @@
         <td style="text-align: center">@ca.NumUnits</td>
         <td>@ca.RevenueCurrency</td>
         <td style="text-align: right">@ca.Revenue.ToString("N2")</td>
+        <td style="text-align: right">@ca.InvoicedAmount.ToString("N2")</td>
         @if (Model.ShowCheckboxes)
         {
             <td>
-                @if (ca.InvoicedAmount < ca.Revenue)
+                @if ((ca.Revenue >= 0 && ca.InvoicedAmount < ca.Revenue) || (ca.Revenue < 0 && ca.InvoicedAmount != ca.Revenue))
                 {
+                    string checkedString = "checked=\"checked\"";
                     <input type="checkbox" name="idpairs" value="@(ca.Pid + "," + ca.AffId)" class="chk@(ca.Pid)" @checkedString />
                 }
             </td>
@@ -59,13 +61,14 @@
             <td>
                 @if (firstRow)
                 {
-                    <text>&#x2713;:</text>
-                    <a href="#" onclick="$('.chk@(ca.Pid)').prop('checked',true); return false">all</a><text> | </text>
-                    <a href="#" onclick="$('.chk@(ca.Pid)').prop('checked',false); return false">none</a>
+                    <text>&#x2713;:&nbsp;</text><a href="#" onclick="$('.chk@(ca.Pid)').prop('checked',true); return false">all</a>
+                    <text>|&nbsp;</text><a href="#" onclick="$('.chk@(ca.Pid)').prop('checked',false); return false">none</a>
                 }
             </td>
         }
-        <td style="text-align: right">@ca.InvoicedAmount.ToString("N2")</td>
+        <td>@ca.CostCurrency</td>
+        <td style="text-align: right">@ca.Cost.ToString("N2")</td>
+        <td style="text-align: right; white-space: nowrap">@ca.MarginPct.ToString("P1")</td>
     </tr>
     if (i == campaignAmounts.Count - 1 || ca.Pid != campaignAmounts[i + 1].Pid)
     {
@@ -79,12 +82,15 @@
             <td style="font-weight: bold; text-align: center">@sa.NumUnits</td>
             <td style="font-weight: bold">@sa.RevenueCurrency</td>
             <td style="font-weight: bold; text-align: right">@sa.Revenue.ToString("N2")</td>
+            <td style="font-weight: bold; text-align: right">@sa.InvoicedAmount.ToString("N2")</td>
             @if (Model.ShowCheckboxes)
             {
                 <td></td>
                 <td></td>
             }
-            <td style="font-weight: bold; text-align: right">@sa.InvoicedAmount.ToString("N2")</td>
+            <td style="font-weight: bold">@sa.CostCurrency</td>
+            <td style="font-weight: bold; text-align: right">@sa.Cost.ToString("N2")</td>
+            <td></td>
         </tr>
     }
 }
